# hello-worldc590104f-b3fc-425c-aff1-1e95f4f6db24

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: CreateHelloWorldMessage_service.py  DeleteHelloWorldMessage_service.py  HelloWorldEndpoint_service.py  UpdateHelloWorldMessage_service.py  api_documentation_service.py  getHelloWorld_service.py  get_api_documentation_service.py  get_hello_world_service.py  server.py
